--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "supa": "supabase"
+    "supa": "supabase",
+    "deploy:functions": "supabase functions deploy"
   },
   "dependencies": {
     "@ant-design/icons": "^5.3.6",
