New invitation flow

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "antd": "^5.16.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
+    "posthog-js": "^1.131.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-editor-js": "^2.1.0",
