--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@reduxjs/toolkit": "^2.2.2",
     "@supabase/supabase-js": "^2.41.1",
     "antd": "^5.16.0",
+    "handlebars": "^4.7.8",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
     "posthog-js": "^1.131.4",
