--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-quill": "^2.0.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
+    "react-router-hash-link": "^2.4.3",
     "redux": "^5.0.1",
     "sort-by": "^1.2.0",
     "uuid": "^9.0.1"
