--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -23,6 +23,9 @@ jobs:
 
       - name: Build application
         run: npm run build
+        env:
+          VITE_REACT_SUPABASE_KEY: ${{vars.VITE_REACT_SUPABASE_KEY}}
+          VITE_REACT_SUPABASE_URL: ${{vars.VITE_REACT_SUPABASE_URL}}
       
       - name: Archive dist folder
         uses: actions/upload-artifact@v4
