--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -24,8 +24,8 @@ jobs:
       - name: Build application
         run: npm run build
         env:
-          VITE_REACT_SUPABASE_KEY: ${{vars.VITE_REACT_SUPABASE_KEY}}
-          VITE_REACT_SUPABASE_URL: ${{vars.VITE_REACT_SUPABASE_URL}}
+          VITE_REACT_SUPABASE_KEY: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImxzeGdlcHlodWhpZHZwc2RzbmxpIiwicm9sZSI6ImFub24iLCJpYXQiOjE3MTE5MTA3NDIsImV4cCI6MjAyNzQ4Njc0Mn0.GQkXKqCACbYgDx8WKch_qUg9NYgEdjmoVxiL_DaEO0A"
+          VITE_REACT_SUPABASE_URL: https://lsxgepyhuhidvpsdsnli.supabase.co
       
       - name: Archive dist folder
         uses: actions/upload-artifact@v4
