new project page

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "handlebars": "^4.7.8",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
+    "moment": "^2.30.1",
     "posthog-js": "^1.131.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
