--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.3.6",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/modifiers": "^9.0.0",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@editorjs/editorjs": "^2.29.1",
     "@mistralai/mistralai": "^1.3.0",
     "@reduxjs/toolkit": "^2.2.2",
